tests/compile_fail/machine_module/attribute_with_value.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module = something]
    mod machine {}
}

fn main() {}
